[package]
name = "circadian_tools"
version = "0.1.0"
edition = "2021"
description = "Tools for working with circadian data, or data that is cyclical like time of day."
homepage = "https://github.com/BWStearns/circadian_tools"
repository = "https://github.com/BWStearns/circadian_tools"
readme = "README.md"
license = "MIT"
categories = ["date-and-time", "mathematics"]
keywords = ["circadian", "cyclical", "average"]
authors = ["Brian Stearns <brianw.stearns@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "circadian_tools"
path = "src/lib.rs"

[dependencies]

[dev-dependencies]
float-cmp = "0.9.0"
