[package]
name = "circadian_tools"
version = "0.1.1"
edition = "2021"
description = "Tools for working with circadian data, or data that is cyclical like time of day."
homepage = "https://github.com/BWStearns/circadian_tools"
repository = "https://github.com/BWStearns/circadian_tools"
readme = "README.md"
license = "MIT"
categories = ["date-and-time", "mathematics"]
keywords = ["circadian", "cyclical", "average"]
authors = ["Brian Stearns <brianw.stearns@gmail.com>"]

exclude = [
    ".github/**/*",
    ".gitignore",
]

[lib]
name = "circadian_tools"
path = "src/lib.rs"

[dependencies]
chrono = "0.4.23"

[dev-dependencies]
float-cmp = "0.9.0"
